# septemmud

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  lua_information.txt  septemmud.workspace
game_data/: init  septemdb.db3  test.lua
game_data/cmds/: close  count  drop  enter  force  get  glance  help  inventory  kneel  knock  lie  look  move  open  put  remove  say  sit  split  stand  swap  time  wear
game_data/cmds/creator/: cd  clone  cp  goto  ls  rm  tail  tp  update
game_data/cmds/creator/arch/: account  promote  reload
game_data/daemon/: command_proc  logon_proc  time  weather
game_data/entities/: player
game_data/lib/: deepcopy  defines  helpsystem  inspect  room  stringfuncs  tail
game_data/logs/: septem  septem.1  septem.2
game_data/realms/: void
game_data/realms/lere/sannesa_port/: docks
game_data/realms/test/: room1  room2
game_data/save/: roomcache
game_data/save/0/0ylw6hvyzfnpjx4/: player_save
game_data/save/1/144vdtofbnhrvve/: player_save
game_data/save/2/2214uct3xu99fmy/: player_save
game_data/save/4/4qrfkpbwnvd8ui9/: player_save
game_data/save/7/7r12sbocz34tw4q/: player_save
game_data/save/9/9f4tkcv8jjxtxao/: player_save
game_data/save/a/abjsicenvqxm3nz/: player_save
game_data/save/a/abnvtg3gdrrmndt/: player_save
game_data/save/b/b7clj0h39ccm0sm/: player_save
game_data/save/c/caliel/: 1UPPeMayroEdhIb  3I8wjMsXjvI7zyT  5rUAyQ09aykOuHq  6GkTrEVYjODvXt6  6q6v3u108vURNRs  7BbOSQaiF6JAv0s  7Z9NjKgCZXfdvPe  7ZIaeTExs2oa9HV  83LNJk4P6SrIqUW  8XU7rms9hzQCtdB  8YXZqKDQx6m4vGZ  8i5aT68iOi9igBX  901JMMcbb0cajMu  97mqGJgwr79Hf4u  9OcgZUXEuyGaQfA  9l7d217bzaFLaFj  AkvbfbXaHKauN4V  CjC3kxRiDUzbj9i  DvLC6AboBSIQEy9  ESd3wmiQXsRV5ji  FUSNeyDu1LUHUeS  FetE6xcKKVtiyQi  GKzah9Tk5oebMMc  GgCo5E7mVot3qBR  GjHYjKQB1GnXwZn  Gti5lt77QkgZ3Jy  HOaRWCIN3ZBb0LW  Hzo9tjDUkMP8lX8  IRvBVBVnTNkGhxm  J65t8vQbXzQ8y9m  JAJKS18I6uSEDjP  JkWsInCHwhBROGo  JvP5jaKFfGYExKd  KVh9qj8lRqCeqw4  KZC9y2HhVLchUnC  LSquxh8X996m8ow  M1zWg9TsZjBlxfq  M41fwOhxD1q4N0O  MBtMTNl781IN7eQ  MjrhIZGODi2hQ5k  (+77 more)
game_data/save/c/cdusaq5cubxpsex/: player_save
game_data/save/c/cv7i0h4lmvu0i6f/: player_save
game_data/save/d/d48vukzf8fhhfzn/: player_save
game_data/save/d/d4xa30a3w9thutn/: player_save
game_data/save/d/dabyeut4xazzfe5/: player_save
game_data/save/d/ddryw9lkcmugvaw/: player_save
game_data/save/e/echnwhzbjnp1j1q/: player_save
game_data/save/f/fa1xcq7votkqksn/: player_save
game_data/save/f/fadeuban9qey3ff/: player_save
game_data/save/g/gawuuyhsorl4q82/: player_save
game_data/save/g/grady/: 2R9WT7DwDKlXmBZ  player_save  vAZ8fAP19rkMwK6
game_data/save/g/gwbywkdfh3o6oh3/: player_save
game_data/save/i/i3bfoec5uh49h1g/: player_save
game_data/save/i/i3saa6dwefvyd6e/: player_save
game_data/save/j/jxawhibc06dzwuz/: player_save
game_data/save/k/kddscga1aos9bxx/: player_save
game_data/save/k/kevin/: hmX83w2LuL754sV  player_save
game_data/save/k/kwbhywsroycsvk3/: player_save
game_data/save/o/ogvt5vhzarw5hnq/: player_save
game_data/save/o/ottalaruyxc2xgk/: player_save
game_data/save/q/qvijxfjwaypdv38/: player_save
game_data/save/q/qx3b9qt2oy2zqun/: player_save
game_data/save/r/ram6dbgzd2h9uh7/: player_save
game_data/save/r/recluse/: 2hfWHiEI1yFte0J  4BLA6PyOKBLKTOc  7MOsT9Ql9D3mE0G  Dq5lWWbDqPTQkV0  FV3F43QOb0SUTrk  LNYUbfD9Vvab4jC  LTSFdtbBZ2aHOWs  LvEiOP9OE5jGwPm  R14gLVw9sTnFu2a  TyC3ZmwhOnhESse  XyzNVIRTlJS6dgz  am9eDdXmooMJVEN  nOYu1cJk6LsTjk3  ntd8Xj1zQXGEHvY  player_save  wwF2qaWF6wOKfQe  x1PE9KoLYkcBBor  xC3jToVJ9gRm0CP
game_data/save/r/rfhcrcvahmpiwrt/: player_save
game_data/save/r/rky4iokrlig6rvp/: player_save
game_data/save/r/rnhtxgwfot3diin/: player_save
game_data/save/t/tmip5l6hswp2tal/: player_save
game_data/workspaces/caliel/: biomes  workroom  workroom_disabled  workroomc
game_data/workspaces/caliel/entities/: rock  (+3 more)
game_data/workspaces/default/: workroom
game_data/workspaces/emris/: workroom
game_data/workspaces/grady/: workroom  workspaces - Shortcut.lnk
game_data/workspaces/recluse/: workroom
septemserver/: CMakeLists.txt  Debugconfig.ini  config.ini  main.cpp  septemserver.mk  septemserver.project  septemserver.txt
septemserver/include/: account.h  account_manager.h  config.h  entity_constants.h  entity_manager.h  entity_wrapper.h  game_manager.h  global_settings.h  heartbeat_manager.h  loghelper.h  luatypes.h  roomobj.h  script_entity.h  security_context.hpp  septem.hpp  state_wrapper.hpp  stdafx.h  string_utils.h  welcome_screen.hpp  world_context.hpp
septemserver/include/fs/: fs_manager.h
septemserver/include/io/: datastream.hpp  db_interface.h  input_datastream.hpp  log_interface.h  output_datastream.hpp
septemserver/include/net/: server.hpp  socket.hpp
septemserver/include/script_entities/: actionobj.h  commandobj.h  container_base.h  daemonobj.h  doorobj.h  entity_ptr.h  exitobj.h  extcommandobj.h  handobj.h  inventory_slot.h  itemobj.h  livingentity.h  lookobj.h  npcobj.h  playerobj.h  roomobj.h  script_entity.h
septemserver/include/server/: client.hpp  connection.hpp  connectionsm.hpp  context_impl.hpp  httpserv.h
septemserver/src/: account.cpp  account_manager.cpp  entity_manager.cpp  entity_wrapper.cpp  game_manager.cpp  global_settings.cpp  heartbeat_manager.cpp  loghelper.cpp  luatypes.cpp  main.cpp  script_entity.cpp  security_context.cpp  septem.cpp
septemserver/src/fs/: fs_manager.cpp
septemserver/src/io/: db_interface.cpp  log_interface.cpp
septemserver/src/net/: server.cpp  socket.cpp
septemserver/src/script_entities/: actionobj.cpp  commandobj.cpp  container_base.cpp  daemonobj.cpp  doorobj.cpp  entity_ptr.cpp  exitobj.cpp  extcommandobj.cpp  handobj.cpp  inventory_slot.cpp  itemobj.cpp  livingentity.cpp  lookobj.cpp  npcobj.cpp  playerobj.cpp  roomobj.cpp  script_entity.cpp
septemserver/src/server/: client.cpp  connection.cpp  context_impl.cpp  httpserv.cpp
terminalpp/: CMakeCache.txt  Makefile  cmake_install.cmake  terminalpp.mk  terminalpp.project  terminalpp.txt
www/: ace.html  index.html  index2.html  server.js  test_tree.html  tree.html  tree2.html
(+13 files in other folders)
